<resources>
    <string name="app_name">Anime_app</string>

    <string-array name="genres">
        <item>Genre</item>
        <item>Romance</item>
        <item>Action</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>History</item>
        <item>Fantasy</item>
    </string-array>

    <string name="login">Login</string>
    <string name="rememberMe">Remember Me</string>
    <string name="addAnime">Add an anime</string>
    <string name="animeName">Anime name</string>
    <string name="ranking">Ranking</string>
    <string name="animeList">See anime list</string>
    <string name="delete">Delete</string>
    <string name="generalConfiguration">General configuration</string>
    <string name="language">Language</string>
    <string name="selectLanguage">Select your language</string>
    <string name="theme">Theme</string>
    <string name="selectTheme">Select your theme</string>
    <string name="deleteData">Delete data</string>
    <string name="deleteAllData">Delete all your data by clicking this button</string>
    <string name="savedData">Saved data</string>
    <string name="information">Information</string>
    <string name="about">About</string>
    <string name="knowMore">Know more about us</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="lightMode">Light Mode</string>
    <string name="darkMode">Dark mode</string>
    <string name="biometricTitle">Biometric login for the app</string>
    <string name="biometricMessage">Log in using your biometric credential</string>
    <string name="close">Close</string>
    <string name="formScreenToast">"You have inserted correctly an anime to the list!"</string>
    <string name="deleteAnime">"Delete animes"</string>
    <string name="alertDeleteAnimes">"Are you sure you want to delete all animes?"</string>
    <string name="alertResultAfterDelete">All animes have been deleted.</string>
    <string name="settings">Settings</string>
    <string name="title">TITLE</string>
    <string name="genre">GENRE</string>
    <string name="rankingMayus">RANKING</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
</resources>