<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:backgroundTint="#D37979"
    tools:context=".FragmentItemDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/detail_screen_bg">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="624dp"
                android:layout_marginTop="140dp"
                android:src="@drawable/detail_screen_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="363dp"
                android:layout_height="669dp"
                android:background="#2196F3"
                android:backgroundTint="#7A8B69E2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/animeTitleTxt"
                    android:layout_width="341dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="44dp"
                    android:background="@drawable/focused_custom_input"
                    android:gravity="center"
                    android:hint="@string/title"
                    android:textSize="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/animeGenereTxt"
                    android:layout_width="236dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/focused_custom_input"
                    android:gravity="center"
                    android:hint="@string/genre"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animePicture"
                    tools:ignore="DuplicateClickableBoundsCheck" />

                <Spinner
                    android:id="@+id/animeGenreSpinner"
                    android:layout_width="236dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/focused_custom_input"
                    android:gravity="center"
                    android:hint="@string/genre"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animePicture" />

                <ImageView
                    android:id="@+id/animePicture"
                    android:layout_width="322dp"
                    android:layout_height="223dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/userdefaultimage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.487"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animeTitleTxt" />

                <Button
                    android:id="@+id/buttonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.232"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.756"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:ems="10"
                    android:inputType="number"
                    android:id="@+id/animeRankTxt"
                    android:layout_width="236dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/focused_custom_input"
                    android:gravity="center"
                    android:hint="@string/rankingMayus"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animeGenereTxt" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>